--- a/example/test.html
+++ b/example/test.html
@@ -3,6 +3,7 @@
        {{task.get('taskname')}}
     </li>
 </ul>
-
+<form novalidate class="simple-form">
 <input type="text" ng-model="newTaskName"/>
-        <button type="button" ng-click="handleNewTask()">Add</button>
+        <button type="submit" ng-click="handleNewTask()">Add</button>
+    </form>
