--- a/example/test.html
+++ b/example/test.html
@@ -3,7 +3,7 @@
        {{task.get('taskname')}}
     </li>
 </ul>
-<form novalidate class="simple-form">
+<form>
 <input type="text" ng-model="newTaskName"/>
         <button type="submit" ng-click="handleNewTask()">Add</button>
     </form>
